--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <title>Simon Game</title>
   <link rel="stylesheet" href="css/externalCSS.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+
+  <meta name="application-name" content="_appName_">
+  <meta name="apple-mobile-web-app-title" content="_appName_">
+  <meta name="msapplication-config" content="_browserConfigFile_">
+  <meta name="theme-color" content="_themeColor_">
+  <link rel="apple-touch-icon" href="../img/_appleIconFile_" sizes="180x180">
+  <link rel="icon" type="image/png" href="../img/_faviconFile32x32_" sizes="32x32">
+  <link rel="icon" type="image/png" href="../img/_faviconFile16x16_" sizes="16x16">
+  <link rel="manifest" href="_manifestFile_">
+  <link rel="mask-icon" href="../img/_maskIconFile_">
+  <link rel="shortcut icon" href="img/ico.png">
 </head>
 
 <body>
